<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_change_settings"
        android:title="@string/change_language"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_change_notification"
        android:title="@string/notification_setting"
        app:showAsAction="never"/>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_favorite_white_24"
        app:showAsAction="always"/>

</menu>