<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        android:background="@color/gray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/img_avatar"
                android:padding="5dp"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_name"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="26dp"
                android:layout_toEndOf="@+id/img_avatar"
                android:layout_toRightOf="@id/img_avatar"
                android:padding="5dp"
                android:text="@string/username" />
            <TextView
                android:id="@+id/txt_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_username"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="26dp"
                android:layout_toEndOf="@+id/img_avatar"
                android:layout_toRightOf="@id/img_avatar"
                android:padding="5dp"
                android:text="@string/company" />
            <TextView
                android:id="@+id/txt_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_company"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="26dp"
                android:layout_toEndOf="@+id/img_avatar"
                android:layout_toRightOf="@id/img_avatar"
                android:padding="5dp"
                android:text="@string/location" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>