<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.fidel.favoritelist.ui.detail.DetailActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_img_avatar"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_margin="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_below="@+id/detail_img_avatar" />

        <TextView
            android:id="@+id/detail_txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="30dp"
            android:text="@string/username"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_below="@id/detail_txt_name" />

        <TextView
            android:id="@+id/detail_txt_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="30dp"
            android:text="@string/repository"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_below="@id/detail_txt_username" />

        <TextView
            android:id="@+id/detail_txt_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="30dp"
            android:text="@string/company"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_below="@id/detail_txt_repository"/>

        <TextView
            android:id="@+id/detail_txt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="30dp"
            android:text="@string/location"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_below="@id/detail_txt_company" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="66dp"
            android:layout_height="64dp"
            android:layout_alignTop="@+id/detail_img_avatar"
            android:layout_alignBottom="@+id/detail_img_avatar"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@id/detail_img_avatar"
            android:background="@color/black"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintEnd_toStartOf="@+id/detail_img_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_share"
            android:layout_width="66dp"
            android:layout_height="64dp"
            android:layout_alignTop="@+id/detail_img_avatar"
            android:layout_alignBottom="@+id/detail_img_avatar"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@id/btn_favorite"
            android:background="@color/black"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintEnd_toStartOf="@+id/detail_img_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:tabTextColor="@color/white"
            app:tabIndicatorColor="@color/white"
            android:layout_below="@id/detail_txt_location"
            app:tabMode="fixed"
            tools:ignore="MissingConstraints" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tab_layout"
            android:background="@color/gray" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>